--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SGAP</string>
-    <string name="sistema_gerenciador_de_clinicas_sgap">Sistema Gerenciador de Clinicas - SGAP</string>
+    <string name="sistema_gerenciador_de_clinicas_sgap">Sistema Gerenciador de Atendimentos ProCare - SGAP</string>
     <string name="escolha_uma_das_op_es_abaixo">Escolha uma das opções abaixo:</string>
     <string name="iniciar_banco_de_dados">Iniciar Banco de Dados</string>
     <string name="todo">TODO</string>
