--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
     <string name="data">Data:</string>
     <string name="observa_es">Observações :</string>
     <string name="digite_a_observa_o_da_consulta">Digite a observação da consulta</string>
+    <string name="login">Login</string>
+    <string name="senha">Senha</string>
+    <string name="usuario">Usuario</string>
+    <string name="passe_seu_usario_e_senha_para_acessar_o_sistema">Passe seu usario e senha para acessar o sistema</string>
 </resources>
